PKG_CHECK_MODULES(KEY_MANAGER_TEST_DEP
    dlog
    openssl
    REQUIRED
    )

SET(TARGET_KEY_MANAGER_TEST_PROVIDER "ckm-tests-internal-provider")

SET(KEY_MANAGER_SRC_PATH ${PROJECT_SOURCE_DIR}/src)
SET(KEY_MANAGER_PATH ${PROJECT_SOURCE_DIR}/src/manager)

SET(KEY_MANAGER_TEST_PROVIDER_SOURCES
    ${KEY_MANAGER_PATH}/service/key-provider.cpp
    ${PROJECT_SOURCE_DIR}/tests/test-key-provider.cpp
    )

SET_SOURCE_FILES_PROPERTIES(
    ${KEY_MANAGER_TEST_SOURCES}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fvisibility=hidden")

INCLUDE_DIRECTORIES(SYSTEM ${KEY_MANAGER_TEST_DEP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(
    ${KEY_MANAGER_SRC_PATH}/include
    ${KEY_MANAGER_PATH}/service
    ${KEY_MANAGER_PATH}/dpl/core/include
    ${KEY_MANAGER_PATH}/dpl/log/include
    )

ADD_EXECUTABLE(${TARGET_KEY_MANAGER_TEST_PROVIDER}
            ${KEY_MANAGER_TEST_PROVIDER_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_KEY_MANAGER_TEST_PROVIDER}
    ${KEY_MANAGER_TEST_DEP_LIBRARIES}
    ${TARGET_KEY_MANAGER_COMMON}
    ${TARGET_KEY_MANAGER_KEY_PROVIDER}
    )

INSTALL(TARGETS ${TARGET_KEY_MANAGER_TEST_PROVIDER} DESTINATION bin)
