PKG_CHECK_MODULES(LISTENER_DEP
    REQUIRED
    dlog
    glib-2.0
    capi-appfw-package-manager
    )

SET(LISTENER_SOURCES ${PROJECT_SOURCE_DIR}/src/listener/listener-daemon.cpp)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src/include
    ${LISTENER_DEP_INCLUDE_DIRS}
    )

ADD_EXECUTABLE(${TARGET_LISTENER} ${LISTENER_SOURCES})

TARGET_LINK_LIBRARIES(
    ${TARGET_LISTENER}
    ${LISTENER_DEP_LIBRARIES}
    ${TARGET_KEY_MANAGER_CLIENT}
    ${TARGET_KEY_MANAGER_CONTROL_CLIENT}
    )

INSTALL(TARGETS ${TARGET_LISTENER} DESTINATION bin)
