SET(PAM_KEY_MANAGER_PLUGIN_SOURCES
    ${PROJECT_SOURCE_DIR}/src/pam_plugin/pam-key-manager-plugin.cpp
    )

INCLUDE_DIRECTORIES(SYSTEM
    ${PAM_KEY_MANAGER_PLUGIN_DEP_INCLUDE_DIRS}
    )

ADD_LIBRARY(${TARGET_PAM_KEY_MANAGER_PLUGIN} SHARED ${PAM_KEY_MANAGER_PLUGIN_SOURCES})

SET_TARGET_PROPERTIES(
    ${TARGET_PAM_KEY_MANAGER_PLUGIN}
    PROPERTIES
        PREFIX ""
        COMPILE_FLAGS "-fvisibility=hidden"
    )

TARGET_LINK_LIBRARIES(${TARGET_PAM_KEY_MANAGER_PLUGIN}
    ${TARGET_KEY_MANAGER_CONTROL_CLIENT}
    ${TARGET_KEY_MANAGER_COMMON}
    )

INSTALL(TARGETS ${TARGET_PAM_KEY_MANAGER_PLUGIN} LIBRARY DESTINATION ${LIB_INSTALL_DIR}/security NAMELINK_SKIP)
